fix: update button styles to improve disabled state visibility

--- a/src/styles.css
+++ b/src/styles.css
@@ -195,7 +195,7 @@ body {
 
 	a,
 	button {
-		@apply cursor-pointer;
+		@apply cursor-pointer disabled:cursor-not-allowed;
 	}
 }
 
